# mps

./: .gitignore  Makefile  README.md  all.bash  bootstrap.bash  desktop.bash  terminal.bash  update.bash
dotfiles/: .NERDTreeBookmarks  .bashrc  .bashrc_alias  .bashrc_colors  .bashrc_distro  .bashrc_prompt  .common_alias.sh  .custom_alias.sh  .gitconfig  .gtkrc-2.0  .nvidia-settings-rc  .vimrc  .zshrc  README.md
dotfiles/.config/: KeePass  birdtray-config.json  dunst  mimeapps.list  picom.conf
dotfiles/.config/KeePass/: KeePass.config.xml
dotfiles/.config/Thunar/: accels.scm  uca.xml
dotfiles/.config/dconf/: config.ini
dotfiles/.config/gedit/: gedit-print-settings
dotfiles/.config/gtk-2.0/: gtkfilechooser.ini
dotfiles/.config/gtk-3.0/: bookmarks  settings.ini
dotfiles/.config/kitty/: kitty.conf
dotfiles/.config/nvim/: init.lua
dotfiles/.config/nvim/mps-testfiles/: CMakeLists.txt  Dockerfile  foo.py  foo.toml  index.html  sample.rest  test.bash  test.tex  timings.txt
dotfiles/.config/qtile/: .xinitrc  colors.py  config.py  floats.py  globals.py  groups.py  helpers.py  keybinds.py  layouts.py  mousebinds.py  scratchpad.py  screens.py  widgets.py
dotfiles/.config/rofi/: config.rasi
dotfiles/.config/tilda/: config_0  config_2
dotfiles/.config/tmux/: tmux.conf  tmux.conf.local
dotfiles/.config/tmuxinator/: scratchpad.yml
dotfiles/.config/volumeicon/: volumeicon
dotfiles/.config/xfce4/: xfce4-screenshooter
installer/: bootstrap-homedir.bash  bootstrap-user.bash  desktop-essentials.bash  desktop-extras.bash  desktop-guitools.bash  desktop-qtile.bash  desktop-rofi.bash  extras-gamedev.bash  extras-gaming.bash  extras-long.bash  extras-spotify.bash  optimize-cryptboot.bash  optimize-grubmenu.bash  optimize-lightdm.bash  optimize-ramdisks.bash  optimize-tty.bash  optimize-zram.bash  terminal-essentials.bash  terminal-fonts.bash  terminal-homedir.bash  terminal-nvim.bash  terminal-vim.bash
skeletons/: Makefile.docker  bash  genkey.bash  venv.bash
skeletons/python-project/: LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
skeletons/quart/: .gitignore  Dockerfile  Makefile  entrypoint.bash  pyproject.toml
skeletons/quart/app/: main.py
skeletons/quart/app/templates/: layout.html
snippets/: autostart.sh  autostart_clean.sh  backup.bash  chtsht.bash  colors.bash  default_fw.bash  dunst_action_handler.bash  dunst_espeak.bash  dunst_fullscreen.bash  elapsed.bash  fiobench.bash  fuzzy-find.bash  hi  hm  ho  keycat.bash  launch_gparted.bash  launch_kitty.bash  launch_tmux.bash  launch_updates.bash  mps2repo.bash  new-skeleton.bash  nicspeed.bash  qtile-reload.bash  qtile-restart.bash  quickvm.bash  randomize_wp.bash  rf  rfs.bash  rofi-boot-dwmswitch.sh  rofi-boot-launcher.sh  rofi-boot-powermenu.sh  run_hoi4_debug.bash  set_locale.bash  venv.bash  vpn.bash  warden_clean.bash  warden_cli.bash
(+142 files in other folders)
