[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DUMMY_NAME"
version = "DUMMY_VERSION"
description = "Short description of your project"
authors = [{ name = "DUMMY_AUTHOR", email = "DUMMY_EMAIL" }]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
[project.scripts]
unattend_my_iso = "DUMMY_NAME.main:main"

[tool.setuptools.packages.find]
where = ["src"]

#[project.urls]
#homepage = "https://github.com/yourusername/your-package-name"
