[metadata]
name = DUMMY_NAME
version = DUMMY_VERSION
author = DUMMY_AUTHOR
author_email = DUMMY_EMAIL
description = Short description
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.8

[options.packages.find]
where = src
