[project]
name = "app"
dependencies = ["quart", "quart-cors"]
description = "Skeleton app"
requires-python = ">=3.11"
dynamic = ["version"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[project.optional-dependencies]
dev = [
  "flake8 ~= 6.0",
  "pylint ~= 2.17",
  "pylint-per-file-ignores ~= 1.2.1",
  "black ~= 23.0",
  "hypothesis ~= 6.80.0",
  "mypy ~= 1.3.0",
  "types-requests",
  "types-click",
  "types-aiofiles",
]

[tool.pyright]
venvPath = ".venv"

[tool.black]
line-length = 80
target-version = ['py311']

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["docker.*", "hypothesis.*", "pytest.*"]
ignore_missing_imports = true

[tool.pylint.basic]
load-plugins = ["pylint_per_file_ignores"]
good-names = "i, j, k, _, ex, id, db, ok, ty"
allowed-redefined-builtins = "id, input, hash"
disable = [
  "too-few-public-methods",       # classes aren't just for methods
  "line-too-long",                # already enforced by black
  "duplicate-code",               # Fix later
  "too-many-function-args",
  "too-many-locals",
  "too-many-arguments",
  "too-many-public-methods",
  "too-many-instance-attributes",
]

[tool.pylint-per-file-ignores]
"/app/" = "invalid-name,missing-module-docstring,missing-function-docstring,missing-class-docstring"
